# uGameMasterServer

./: CMakeLists.txt
include/: Constants.h
include/core/: Client.h  Query.h  Server.h
include/utils/: Logger.h  MD5.h
src/: main.cpp
src/core/: Client.cpp  Query.cpp  Server.cpp
src/utils/: Logger.cpp  MD5.cpp
